docker/traefik-k8s-dash-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`dash.kube.uat.io`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
